# papo

./: .gitignore  Cargo.toml  README.md
src/: args.rs  arguments.rs  init_project.rs  logger.rs  main.rs  papo_json.rs  types.rs
src/modules/: mod.rs  start.rs
