[package]
name = "papo"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
clap = { version = "3.2.17" , features = ["derive"]}
serde = { version = "1.0.143" , features = ["derive"]}

mini-redis = "0.4"
serde_json = "1.0"
serde_urlencoded = "0.7"
futures-util = "0.3.21"
termion = "1.5.6"